methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:39: error: not found: value guahce
  baisseBrosse();leveBrosse();avance();gauche();avance();baisseBrosse();leveBrosse(); guahce(); avance(); gauche(); avance()
                                                                                      ^